Fix stars cut off: use min-height instead of fixed height on service page cards

--- a/client/src/pages/Service.css
+++ b/client/src/pages/Service.css
@@ -230,7 +230,8 @@
   display: flex;
   flex-direction: column;
   width: 300px;
-  height: 480px;
+  min-height: 480px;
+  height: auto;
 }
 
 .worker-card > *:first-child {
